--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <!-- Puter.js client SDK (loads global `puter`) -->
+    <script src="https://js.puter.com/v2/"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
